# fhir_sandbox

./: README.md  patient_details.fhir.json
fhih-sandbox/: README.md  main.py  pyproject.toml
fhih-sandbox/data/: patient_details.fhir.json
fhih-sandbox/notes/: brett_call.md
fhih-sandbox/src/: fhir-resources-py.py  main.py  sandbox.ipynb
notes/: fhir_standards.md
